Removed console log from modal.js. Added spacing for icon list items. Quote block video embed no longer shows the video title.

--- a/assets/stylesheets/block/_icon-list.scss
+++ b/assets/stylesheets/block/_icon-list.scss
@@ -6,7 +6,6 @@
 
 	.heading {
 		width: 100%;
-		margin-bottom: 30px;
 	}
 
 	.list {
@@ -30,7 +29,7 @@
 		display: flex;
 		align-items: flex-start;
 		width: calc(25% - 30px);
-		margin: 0 15px;
+		margin: 30px 15px 0;
 	}
 
 	.icon-image {
